# gitclone

./: .gitignore  Cargo.toml  flake.nix
src/: author.rs  blob.rs  checksum.rs  command.rs  commit.rs  database.rs  entry.rs  index.rs  lib.rs  object.rs  refs.rs  tree.rs  util.rs  workspace.rs
tests/: index.rs
tests/command/: add_test.rs  commit_test.rs  mod.rs  status_test.rs
