[package]
name = "gitclone"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="~2.33.1", features = ["yaml"]}
ring = {version="~0.16.20"}
data-encoding = {version="~2.3.2"}
libflate = {version="~1.1.1"}
hex = {version="~0.4.3"}
chrono = {version="~0.4.19", features = ["unstable-locales"]}
anyhow = "1.0" # Nicer error handling
# bincode = "1.2.1"
# serde = {version = "1.0.113", features = ["derive"]}
# serde_bytes = "0.11.5"
byteorder = "1.4.3"
